@@ -1,3 +1,8 @@
+2002-11-10  Per Bothner  <per@bothner.com>
+
+	* LetExp.java (print):  New overloaded method.
+	* FluidLetExp.java (print):  New method.
+
 2002-11-05  Per Bothner  <per@bothner.com>
 
 	* Interpreter.java (parseFile):  Take extra 'immediate' argument.
